<?xml version="1.0"?>
<package>
  <name>hexapod_bringup</name>
  <version>0.0.1</version>
  <description>Hexapod package for hexapod research platform</description>
  <author email="naufaldo1301@gmail.com">Naufaldo</author>
  <maintainer email="naufaldo1301@gmail.com">Naufaldo</maintainer>
  <license>None</license>

  <url type="website">http://ros.org</url>

  <buildtool_depend>catkin</buildtool_depend>

  <export>
    <nodelet plugin="${prefix}/hexapod_bringup.xml" />
  </export>
</package>
